acmegifts/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-ui
spec:
  selector:
    app: front-end-ui
  ports:
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: microservice-auth
  ports:
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: microservice-user
  ports:
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: group
spec:
  selector:
    app: microservice-group
  ports:
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: occasion
spec:
  selector:
    app: microservice-occasion
  ports:
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: microservice-notification
  ports:
  - name: http
    protocol: TCP
    port: 9080
    targetPort: 9080
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: notification11
spec:
  selector:
    app: microservice-notification11
  ports:
  - name: http
    protocol: TCP
    port: 9080
    targetPort: 9080
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
