acmegifts/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-end-ui-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: front-end-ui
          servicePort: 9443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /auth
    ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /service/auth
        backend:
          serviceName: auth
          servicePort: 9443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /users
    ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /service/users
        backend:
          serviceName: user
          servicePort: 9443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logins-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /logins
    ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /service/logins
        backend:
          serviceName: user
          servicePort: 9443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: groups-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /groups
    ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /service/groups
        backend:
          serviceName: group
          servicePort: 9443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: occasions-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /occasions
    ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /service/occasions
        backend:
          serviceName: occasion
          servicePort: 9443
